k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gordion-relay
  labels:
    name: gordion-relay
    app.kubernetes.io/name: gordion-relay
    app.kubernetes.io/part-of: zenpacs-infrastructure
